--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					</h2>
 				</div>
 				<nav id="primaryNavigation" data-visible="false">
-					<ul>
+					<ul class="navUl">
 						<li><a href="#home">Home</a></li>
 						<li><a href="#events">Events</a></li>
 						<li><a href="#menu">Menu</a></li>
@@ -35,8 +35,13 @@
 				</nav>
 			</div>
 			<div class="headerInfo">
-				<p>Start Your Good Day at <span>Corner Cafe</span></p>
+				<p>Start Your Good Day <br />at <br /><span>Corner Cafe</span></p>
 				<a href="#">Our Cafes</a>
+			</div>
+			<div class="backToTop">
+				<a href="#home">
+					<i class="fas fa-arrow-up"></i>
+				</a>
 			</div>
 		</header>
 
