fixed fontawsome icons

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<a href="#"><i class="fab fa-instagram-square"></i></a>
 					</li>
 					<li>
-						<a href="#"><i class="fab fa-facebook-square"></i></a>
+						<a href="#"><i class="fab fa-brands fa-facebook-square"></i></a>
 					</li>
 					<li>
 						<a href="#"><i class="fab fa-twitter-square"></i></a>
