--- a/index.html
+++ b/index.html
@@ -47,13 +47,9 @@
 			</div>
 		</header>
 
-		<!-- ========================
-             main section starts here.
-             ======================== -->
+		<!------------------- main section starts here.----------------->
 		<main>
-			<!-- ===============================
-                 Working hour section starts here.
-                 ================================ -->
+			<!------------- Working hour section starts here. ------------->
 			<hr />
 			<section class="workingHours">
 				<div>
@@ -68,9 +64,7 @@
 				</div>
 			</section>
 
-			<!-- ==========================
-                 Events section starts here.
-                 ========================== -->
+			<!------------ Events section starts here. ----------------->
 			<hr />
 			<section class="events" id="events">
 				<div>
@@ -85,9 +79,7 @@
 				</div>
 			</section>
 
-			<!-- ==========================
-                 Menu section starts here.
-                 ========================== -->
+			<!----------------- Menu section starts here. ----------------->
 			<hr />
 			<section class="menu" id="menu">
 				<h2>
@@ -133,9 +125,7 @@
 				</div>
 			</section>
 
-			<!-- ==========================
-                 About section starts here.
-                 ========================== -->
+			<!---------------- About section starts here. ----------------------->
 			<hr />
 			<section class="about" id="about">
 				<h2>
@@ -146,27 +136,31 @@
 						<h3>Harry Smith</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nesciunt ullam corporis animi nulla. Laudantium voluptatum soluta molestiae beatae architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						<p>Nemo exercitationem nihil, quod asperiores praesentium expedita a temporibus earum velit labore dolorum dolorem nostrum? Molestiae, quod.</p>
-						<img src="/images/person1.jpg" alt="person1" />
+						<div class="img">
+							<img src="/images/person1.jpg" alt="person1" />
+						</div>
 					</div>
 					<div class="aboutCrew">
 						<h3>Luna Carl</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nesciunt ullam corporis animi nulla. Laudantium voluptatum soluta molestiae beatae architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						<p>Nemo exercitationem nihil, quod asperiores praesentium expedita a temporibus earum velit labore dolorum dolorem nostrum? Molestiae, quod.</p>
-						<img src="/images/person2.jpg" alt="person1" />
+						<div class="img">
+							<img src="/images/person2.jpg" alt="person1" />
+						</div>
 					</div>
 					<div class="aboutCrew">
 						<h3>Josh Morton</h3>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nesciunt ullam corporis animi nulla. Laudantium voluptatum soluta molestiae beatae architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						<p>Nemo exercitationem nihil, quod asperiores praesentium expedita a temporibus earum velit labore dolorum dolorem nostrum? Molestiae, quod.</p>
-						<img src="/images/person3.jpg" alt="person1" />
+						<div class="img">
+							<img src="/images/person3.jpg" alt="person1" />
+						</div>
 					</div>
 				</div>
 			</section>
 		</main>
 
-		<!-- ===============
-             Start of footer
-             =============== -->
+		<!---------------------- Start of footer ---------------------->
 		<hr />
 		<footer id="contactUs">
 			<div class="formContainer">
